added layout for edit profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,7 @@
     <!-- Sign In Fragment -->
     <string name="does_not_have_an_account">Doesn\'t have an account?</string>
     <string name="register_here">Register here</string>
+    
+    <!-- Edit Profile -->
+    <string name="save">Save</string>
 </resources>
