added layout for edit profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,6 @@
     
     <!-- Edit Profile -->
     <string name="save">Save</string>
+    <string name="gender">Gender</string>
+    <string name="birthday">Birthday</string>
 </resources>
