--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="save">Save</string>
     <string name="gender">Gender</string>
     <string name="birthday">Birthday</string>
+    <string name="address">Address</string>
 </resources>
