edit profile minor fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,9 @@
     <string name="gender">Gender</string>
     <string name="birthday">Birthday</string>
     <string name="address">Address</string>
+    <string name="confirm">Confirm</string>
+    <string-array name="gender_spinner">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
 </resources>
