--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,15 @@
     <string name="label_home">Home</string>
     <string name="label_inbox">Inbox</string>
     <string name="label_account">Account</string>
-    <string name="empty_fields">%1$s please fill in</string>
+    <string name="empty_fields">Please fill in the %1$s field</string>
     <string name="wrong_format">%1$s wrong format</string>
+    <string name="wrong_length_phone">Phone number must be 12 characters long (08…)</string>
     <string name="minimum_characters">%1$s minimum 8 characters</string>
+    <string name="label_full_name">Full Name</string>
     <string name="label_email">Email</string>
+    <string name="label_birthdate">Birthdate</string>
+    <string name="label_address">Address</string>
+    <string name="label_phone_number">Phone Number</string>
     <string name="label_password">Password</string>
     <string name="label_legal">By continuing, you agree with our <a href="https://google.com">Term &amp; Conditions</a> and <a href="https://google.com">Privacy Policy</a></string>
     <string name="label_register">Register</string>
