--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,9 @@
     <!-- schedules -->
     <string name="hari_ke">Hari ke-%1$d</string>
     <string name="time_schedules">%1$s - %2$s WIB</string>
+
+    <!-- faqs -->
+    <string name="faq_question">%1$d. %2$s </string>
+    <string name="hide">Hide</string>
+    <string name="question">Question</string>
 </resources>
