--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,7 +158,7 @@
     <string name="terms">%1$d. %2$s \n</string>
 
     <!-- penilaian produk -->
-    <string name="rb_rating_num">%1$d/5 (%2$d ulasan)</string>
+    <string name="rb_rating_num">%1$s/5 (%2$d ulasan)</string>
     <string name="lihat_semua">Lihat Semua</string>
     <string name="anonymous">Anonymous</string>
 
