--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,6 +142,9 @@
     <string name="description">Description</string>
     <string name="tanggal_pelaksanaan_w_value">%1$s - %2$s</string>
     <string name="result">%1$d result for %2$s</string>
+    <string name="next">Next</string>
+    <string name="previous">Prev</string>
+    <string name="page">Page</string>
 
     <!-- Product Detail Fragment Expand -->
     <string name="favorite">%1$d favorites</string>
